tests/lean/commandPrefix.lean.expected.out
have this := ();
this : Id Unit
commandPrefix.lean:3:0-3:4: error: unexpected identifier; expected command
